--- a/pushdockerimage/Jenkinsfile
+++ b/pushdockerimage/Jenkinsfile
@@ -12,8 +12,8 @@ pipeline {
         }
         stage('Build Image') {
             steps {
-                //sh 'docker build -t raj80dockerid/jenkinstest ./pushdockerimage/' (this will use the tag latest)
-		sh 'docker build -t raj80dockerid/jenkinstest:$BUILD_NUMBER ./pushdockerimage/'
+                //sh 'docker build -t ranjith093/jenkinstest ./pushdockerimage/' (this will use the tag latest)
+		sh 'docker build -t ranjith093/jenkinstest:$BUILD_NUMBER ./pushdockerimage/'
             }
         }
         stage('Docker Login') {
@@ -24,8 +24,8 @@ pipeline {
             }
         stage('Docker Push') {
             steps {
-		//sh 'docker push raj80dockerid/jenkinstest' (this will use the tag latest)    
-                sh 'docker push raj80dockerid/jenkinstest:$BUILD_NUMBER'
+		//sh 'docker push ranjith093/jenkinstest' (this will use the tag latest)    
+                sh 'docker push ranjith093/jenkinstest:$BUILD_NUMBER'
                 }
             }
         }
